Version 0.9.0beta1 - 2007-XX-YY
 * Bug Fixes:
   * Save XSOP frame to ID3v2.3 tags. (#2484)
   * Don't write string terminators to ID3 frames.
   * Use attributes like 'guest' or 'additional' also
     from generic performer ARs.
   * Fixed capitalization of %releasetype% in file naming preview. (#2762)
   * Fixed 'python setup.py build_ext' if py2app and setuptools are loaded.
   * ID3v2.3 frame TDAT should be written in format DDMM, not MMDD. (#2770)
   * Don't display an error on Ogg and FLAC files with no tags.

Version 0.9.0alpha8 - 2007-04-15
 * New Features:
   * Notification of changed files in releases. (#2632, #2702)
 * Bux Fixes:
   * Don't open the file for analyzing twice. (#2733, #2734)
   * Save ASIN and release country to ID3 tags. (#2484, #2456)
   * Variable %country% renamed to %releasecountry%.
   * Save release country to MP4 and WMA tags.
   * Don't take unsupported tags into account when checking if the
     tags are 'complete' and the file should have 100% match. This
     fixes problems with showing the green check-marks for file
     with limited tag formats, like MP4 or WMA.
   * Ignore missing tag in $unset().

Version 0.9.0alpha7 - 2007-04-14
 * New Features
   * Remember location in the file browser. (#2618)
   * Added FFmpeg support on Windows (MP3, Vorbis,
     FLAC, WavPack and many other audio formats).
   * Lowercase the extension on file renaming/moving. (#2701)
   * TaggerScript function `$copy(new,old)` to copy metadata from
     variable `old` to `new`. The difference between `$set(new,%old%)`
     is that `$copy(new,old)` copies multi-value variables without
     flattening them.
   * Added special purpose TaggerScript variable `%_id3:%` for direct
     setting of ID3 frames. Currently it supports only TXXX frames in format
     `%_id3:TXXX:<description>%`, for example:
     `$copy(_id3:TXXX:PERFORMERSORTORDER,artistsort)`.
   * Support for WAV files. (#2537)
   * Removed GStreamer-based decoder.